  user logs in, their username is changed to the value of the ID in
  that field. No default, so not operational in standard demo catalog.
  Enabled with:

  		UserDB  default   merged_user  merge_to

  That would look in the database field "merge_to" for a user name
  to change to.

Payment
-------

* Added PaypalExpress payment module from Lyn St George <info@zolotek.net>.

UserTag
-------

* [run-profile] now accepts ref attribute to check an arbitrary hash.

* Added empty attribute for [convert-date] to display a custom string
  instead of the current date when no proper date is passed.


SystemTag
---------

* The error is now not anymore automatically appended to the output of [error]
  when MV_ERROR_STD_LABEL has a value.


Checks
------

* Allow custom error messages for email_only check.

------------------------------------------------------------------------------


Interchange 5.7.1 released 2008-11-13.

Core
----

* Perl 5.8.5 or newer is now required.

* Fixed regression in Vend::Table::DBI::set_slice for the following usage
  pattern (RT #200):

  $Db{table}->set_slice('', %parms));

* Quell bogus warnings from Encode::Alias (#224). Thanks to Andy
  <ic@tvcables.co.uk> and Rene Hertell <icdevgroup@hertell.com>.

* Added Nunavut to the list of valid Canadian provinces (#231). Thanks to
  Mathew Jones for the report.

* Fix vulnerability where a string passed in the mv_order_item CGI variable is
  displayed verbatim without any input sanitation if there is a valid sku in
  mv_sku. Thanks to Mat from Bibliopolis for discovering and reporting the
  vulnerability.

* Refined error message for missing actions.

* Vend::Interpolate::interpolate_html returns undef on undefined input text.
  This allows to determine whether $Tag->include fails or just produces an
  empty string.

* Fixed deficiency in Levies, where multiple handling modes separated by null
  would not work as in the old subtotal calculation model.
